<resources>

    <!-- Homepage -->
    <string name="home_tv_appName">Jurassic Pets</string>
    <string name="home_btn_start">START</string>
    <string name="home_btn_help">HELP</string>
    <string name="home_btn_about">ABOUT</string>
    <string name="image_of_three_pets">Image of three pets</string>

    <!-- Choose pet page -->
    <string name="choose_btn_nextPage">Let\'s go!</string>
    <string name="home_iv_pets">Three pets image</string>
    <string name="name_your_pet">Name your pet</string>

    <string name="triceratops">Triceratops</string>
    <string name="trex2">Trex</string>
    <string name="brontasaurus">Brontasaurus</string>
    <string name="bront">bront</string>
    <string name="trex">trex</string>
    <string name="tri">tri</string>

    <!-- Main page -->
    <string name="main_btn_startPedometer">Wake up</string>
    <string name="main_tv_petLevel">Pet level:</string>
    <string name="main_btn_stopPedometer">Stop</string>
    <string name="egg_image">egg image</string>
    <string name="image_of_the_pet">Image of the pet</string>
    <string name="btn_shop">Shop</string>
    <string name="btn_feed">Feed</string>
    <string name="main_my_items"><u>My items</u></string>

    <!-- Shop page -->
    <string name="shop">Shop</string>
    <string name="shop_title">Shop title</string>
    <string name="shop_btn_back">RETURN</string>
    <string name="shop_btn_buyApple">BUY</string>

    <!-- About page -->
    <string name="about_tv_text">
        Jurassic Pets is a mobile application that lets you choose a pet that you can walk.
        Earn coins by meeting the step target to buy items for your pet.</string>

    <!-- Help page -->
    <string name="help_tv_text">Need help?</string>

    <!-- Shared -->
    <string name="title_screen">Jurassic Pets</string>
    <string name="header">Header with leaves</string>
    <string name="footer">Footer with leaves</string>
    <string name="home_btn">HOME</string>
    <string name="apple_image">Apple image</string>
    <string name="shop_rb_item1">Apple</string>
    <string name="shop_rb_item2">Banana</string>
    <string name="shop_tv_itemstText">Items you can buy for your pet:</string>



</resources>
