<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@android:color/white"
                                                   tools:layout_editor_absoluteY="76dp"
                                                   tools:layout_editor_absoluteX="-4dp">


    <TextView
            android:id="@+id/home_tv_title"
            android:text="@string/title_screen"
            android:layout_width="339dp"
            android:layout_height="83dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="@font/bungee"
            android:textSize="36sp"
            android:textColor="#FABE0C"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_iv_header"
            app:layout_constraintBottom_toTopOf="@+id/home_iv_pets" app:layout_constraintVertical_bias="0.931"
            android:textAlignment="center"/>
    <Button
            android:id="@+id/home_btn_start"
            android:text="@string/home_btn_start"
            android:layout_width="103dp"
            android:layout_height="54dp"
            android:background="@drawable/btn_round"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:fontFamily="@font/bungee"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/home_iv_pets"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.103"/>

    <Button
            android:id="@+id/home_btn_about"
            android:text="@string/home_btn_about"
            android:layout_width="93dp"
            android:layout_height="44dp"
            android:background="@drawable/btn_round"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:fontFamily="@font/bungee"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/home_iv_pets"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.608"
            app:layout_constraintBottom_toTopOf="@+id/home_iv_footer"
            app:layout_constraintEnd_toStartOf="@+id/home_btn_start"/>
    <Button
            android:id="@+id/home_btn_help"
            android:text="@string/home_btn_help"
            android:layout_width="95dp"
            android:layout_height="44dp"
            android:background="@drawable/btn_round"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:fontFamily="@font/bungee"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/home_iv_pets"
            app:layout_constraintBottom_toTopOf="@+id/home_iv_footer"
            app:layout_constraintStart_toEndOf="@+id/home_btn_start" app:layout_constraintHorizontal_bias="0.753"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.521"/>
    <ImageView
            android:id="@+id/home_iv_pets"
            android:layout_width="361dp"
            android:layout_height="172dp"
            app:srcCompat="@drawable/bg_title_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/image_of_three_pets"
            android:layout_marginBottom="164dp" app:layout_constraintHorizontal_bias="0.333"/>
    <ImageView
            android:id="@+id/home_iv_header"
            android:layout_width="373dp"
            android:scaleType="fitXY"
            android:layout_height="103dp"
            app:srcCompat="@drawable/bg_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.421"
            android:contentDescription="@string/header"/>
    <ImageView
            android:id="@+id/home_iv_footer"
            android:layout_width="382dp"
            android:layout_height="97dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bg_header_flipped"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_btn_start" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/footer"/>


</androidx.constraintlayout.widget.ConstraintLayout>