<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:id="@+id/shop_tv_title"
            android:text="@string/shop"
            android:layout_width="143dp"
            android:layout_height="55dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="@font/bungee"
            android:textColor="#FABE0C"
            android:contentDescription="@string/shop_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.172"
            android:textSize="30sp" app:layout_constraintHorizontal_bias="0.541" android:textAlignment="center"/>

    <TextView
            android:id="@+id/shop_tv_coins"
            android:layout_width="158dp"
            android:layout_height="30dp"
            android:textColor="@color/mainText"
            android:fontFamily="@font/bungee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.323"
            app:layout_constraintTop_toBottomOf="@+id/shop_tv_title"
            app:layout_constraintBottom_toTopOf="@+id/shop_tv_items" android:textAlignment="center"/>
    <Button
            android:id="@+id/shop_btn_back"
            android:text="@string/shop_btn_back"
            android:layout_width="97dp"
            android:layout_height="34dp"
            android:background="@drawable/btn_round"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/bungee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_btn_buy"
            app:layout_constraintVertical_bias="0.708" app:layout_constraintBottom_toTopOf="@+id/shop_iv_footer"/>
    <Button
            android:id="@+id/shop_btn_buy"
            android:text="@string/shop_btn_buyApple"
            android:layout_width="80dp"
            android:layout_height="38dp"
            android:background="@drawable/btn_round"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:fontFamily="@font/bungee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_rg"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toTopOf="@+id/shop_btn_back" app:layout_constraintHorizontal_bias="0.483"/>
    <ImageView
            android:id="@+id/shop_iv_header"
            android:layout_width="370dp"
            android:scaleType="fitXY"
            android:layout_height="94dp"
            app:srcCompat="@drawable/bg_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.421"
            android:contentDescription="@string/header"/>
    <ImageView
            android:id="@+id/shop_iv_footer"
            android:layout_width="382dp"
            android:layout_height="87dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bg_header_flipped"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_btn_back" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/footer"/>

    <RadioGroup
            android:id="@+id/shop_rg"
            android:layout_width="321dp"
            android:layout_height="41dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="168dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.937"
            app:layout_constraintHorizontal_bias="0.58">
        <RadioButton
                android:id="@+id/shop_rb_item1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>
        <RadioButton
                android:id="@+id/shop_rb_item2"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>
        <RadioButton
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:id="@+id/shop_rb_item3"
                android:layout_margin="5dp"/>
    </RadioGroup>
    <TextView
            android:id="@+id/shop_tv_items"
            android:text="@string/shop_tv_itemstText"
            android:layout_width="406dp"
            android:layout_height="36dp"
            android:textColor="@color/mainText"
            android:fontFamily="@font/bungee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_tv_coins"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@+id/shop_iv_banana"
            app:layout_constraintVertical_bias="0.247"
            android:textAlignment="center"/>
    <ImageView
            android:layout_width="71dp"
            android:layout_height="71dp" app:srcCompat="@drawable/apple" android:id="@+id/shop_iv_apple"
            app:layout_constraintBottom_toTopOf="@+id/shop_rg" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="28dp"
            app:layout_constraintVertical_bias="0.73" app:layout_constraintTop_toBottomOf="@+id/shop_tv_items"
            app:layout_constraintEnd_toStartOf="@+id/shop_iv_banana"/>
    <ImageView
            android:layout_width="86dp"
            android:layout_height="67dp" app:srcCompat="@drawable/banana" android:id="@+id/shop_iv_banana"
            app:layout_constraintStart_toEndOf="@+id/shop_iv_apple"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/shop_iv_hero"
            app:layout_constraintBottom_toTopOf="@+id/shop_rg" android:layout_marginBottom="28dp"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/shop_tv_items"/>
    <ImageView
            android:layout_width="143dp"
            android:layout_height="99dp" app:srcCompat="@drawable/char_hero_01_min" android:id="@+id/shop_iv_hero"
            app:layout_constraintStart_toEndOf="@+id/shop_iv_banana"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/shop_rg"
            app:layout_constraintTop_toBottomOf="@+id/shop_tv_items"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.106"/>

</androidx.constraintlayout.widget.ConstraintLayout>