<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:gravity="center"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/linearLayout"
                                                   android:background="#FFFFFF">

    <TextView
            android:id="@+id/main_tv_steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="280dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/main_btn_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:id="@+id/main_btn_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round"
            android:text="@string/main_btn_startPedometer"
            android:textColor="@android:color/white"
            android:fontFamily="@font/bungee"
            app:layout_constraintTop_toBottomOf="@+id/main_tv_steps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/main_btn_stop"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:id="@+id/main_btn_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round"
            android:text="@string/main_btn_stopPedometer"
            android:textColor="@android:color/white"
            android:fontFamily="@font/bungee"
            app:layout_constraintTop_toBottomOf="@+id/main_btn_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <Button
            android:id="@+id/main_btn_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round"
            android:text="@string/btn_shop"
            android:textColor="@android:color/white"
            android:fontFamily="@font/bungee"
            app:layout_constraintStart_toEndOf="@+id/main_tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.042"/>

    <TextView
            android:id="@+id/main_tv_coins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="500dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/main_btn_stop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:id="@+id/main_iv_pet"
            android:layout_width="138dp"
            android:layout_height="158dp"
            app:srcCompat="@drawable/bg_egg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/main_tv_steps"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.918"
            android:contentDescription="@string/image_of_the_pet"/>
    <TextView
            android:id="@+id/main_tv_level"
            android:layout_width="131dp"
            android:layout_height="19dp"
            app:layout_constraintTop_toBottomOf="@+id/main_tv_coins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.064"/>
    <TextView
            android:id="@+id/main_tv_name"
            android:layout_width="197dp"
            android:layout_height="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.06"
    />


</androidx.constraintlayout.widget.ConstraintLayout>
